# ml-eng-takehome-mk

./: .envrc  .gitignore  README.md  askscience_data.csv  pyproject.toml
modules/: aaa.py  common.py  memory.py  option_1.py  option_2.py  option_2_2.py  option_2_3.py  option_3.py  prediction.py
